We made changes to add a score and starting to implement upgrades.

--- a/Projectawesome/index.html
+++ b/Projectawesome/index.html
@@ -7,8 +7,15 @@
 </head>
 
 <body>
-    <img id="image" src='images/aerodactyl.png' alt='This is a picture of lugia' width=20% height=20%>
-    <p id="currentHP">This paragraph is white with style.css</p>
+	<div  class="inline">
+    	<img id="image" src='images/aerodactyl.png' alt='This is a picture of lugia' width=20% height=20%>
+    	<p id="currentHP">This paragraph is white with style.css</p>
+    </div>
+    <div class="inline">
+    	<p>Score: </p>
+    	<p id="score">0</p>
+    	<button id="upgrade">Click Meh!</button>
+    </div>
     <script src="scripts/pokemon.js"></script>
 </body>
 </html>
