--- a/Projectawesome/index.html
+++ b/Projectawesome/index.html
@@ -7,14 +7,14 @@
 </head>
 
 <body>
-	<div  class="inline">
-    	<img id="image" src='images/aerodactyl.png' alt='This is a picture of lugia' width=20% height=20%>
+	<div class="inline">
+    	<img id="image" width=50% height=50%>
     	<p id="currentHP">This paragraph is white with style.css</p>
     </div>
     <div class="inline">
     	<p>Score: </p>
     	<p id="score">0</p>
-    	<button id="upgrade">Click Meh!</button>
+    	<button id="upgrade">Pay 50 For Upgrade!</button>
     </div>
     <script src="scripts/pokemon.js"></script>
 </body>
