Refactoring Code and Change CSS coding
Additional changes to the html and CSS code as well as refactoring some
of the old code.

--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 
 <html>
 <head>
-    <title>Project Awesome</title>
-    <link rel='stylesheet' type='text/css' href='styles/style.css'>
+  <link rel='stylesheet' type='text/css' href='styles/style.css'>
 </head>
 
 <body>
-	<div class="inline">
-    	<img id="image" width=50% height=50%>
-    	<p id="currentHP">This paragraph is white with style.css</p>
-    </div>
-    <div class="inline">
-    	<p>Score: </p>
-    	<p id="score">0</p>
-    	<button id="upgrade">Pay 50 For Upgrade!</button>
-    </div>
-    <script src="scripts/pokemon.js"></script>
+  <div>
+    <h1>Name of the Pokemon</h1>
+    <img id="image" class="image">
+    <p id="currentHP">Current Health Points</p>
+  </div>
+  <div class="inline">
+    <p id="score">Score: 0</p>
+    <button id="upgrade">Pay 50 For Upgrade!</button>
+  </div>
 </body>
-</html>
+</html></html>
