--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 
 <html>
 <head>
+  <title>Pokemon Clicker</title>
   <link rel='stylesheet' type='text/css' href='styles/style.css'>
 </head>
 
 <body>
   <div>
-    <h1>Name of the Pokemon</h1>
-    <img id="image" class="image">
-    <p id="currentHP">Current Health Points</p>
+    <h1 id='pokeName'>Name of the Pokemon</h1>
+    <img id='image' class='image'>
+    <p id='currentHP'>Current Health Points</p>
   </div>
-  <div class="inline">
-    <p id="score">Score: 0</p>
-    <button id="upgrade">Pay 50 For Upgrade!</button>
+  <div class='inline'>
+    <p id='score'>Score: 0</p>
+    <button id='upgrade'>Pay 50 For Upgrade!</button>
   </div>
 </body>
-</html></html>
+<script src='scripts/pokemon.js'></script>
+</html>
