--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -3,18 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
-        <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
+        <script src="Phaser.min.js"></script>
     </head>
     <body style="overflow:hidden;">
 
     <script type="text/javascript">
 
     window.onload = function() {
-
-        //  Note that this html file is set to pull down Phaser 2.5.0 from the JS Delivr CDN.var
-        //  Although it will work fine with this tutorial, it's almost certainly not the most current version.
-        //  Be sure to replace it with an updated version before you start experimenting with adding your own code.
-        //  REAllY IMPORTANT!!!
 
         var game = new Phaser.Game(window.innerWidth, window.innerHeight, Phaser.WEBGL, '', { preload: preload, create: create });
 
