--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -3,32 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <title>hello phaser!</title>
-        <script src="Phaser.min.js"></script>
+        <script src="PhaserJS/Phaser.min.js"></script>
     </head>
     <body style="overflow:hidden;">
-
-    <script type="text/javascript">
-
-    window.onload = function() {
-
-        var game = new Phaser.Game(window.innerWidth, window.innerHeight, Phaser.WEBGL, '', { preload: preload, create: create });
-
-        function preload () {
-
-            game.load.image('logo', 'phaser.png');
-
-        }
-
-        function create () {
-
-            var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-            logo.anchor.setTo(0.5, 0.5);
-
-        }
-
-    };
-
-    </script>
-
+      <script src='scripts/newpoke.js'></script>
     </body>
 </html>
