--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -1,11 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>hello phaser!</title>
-        <script src="PhaserJS/Phaser.min.js"></script>
-    </head>
-    <body style="overflow:hidden;">
-      <script src='scripts/newpoke.js'></script>
-    </body>
+<head>
+  <title>Literate Telegram</title>
+  <script src ='scripts/phaser.min.js'></script>
+  <script src='scripts/images.js'></script>
+  <!-- <link rel='stylesheet' href='styles/style.css'> -->
+</head>
+<body>
+</body>
 </html>
