--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <title>Literate Telegram</title>
-  <script src ='scripts/phaser.min.js'></script>
-  <script src='scripts/images.js'></script>
-  <!-- <link rel='stylesheet' href='styles/style.css'> -->
-</head>
-<body>
-</body>
+    <head>
+      <meta charset='utf-8'>
+      <title>Literate Telegram</title>
+      <style>
+        body {
+          margin: 0;
+          padding: 0;
+        }
+      </style>
+
+      <script src ='scripts/phaser.min.js'></script>
+
+      <script src='scripts/script.js'></script>
+  </head>
+  <body>
+
+  </body>
 </html>
