--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -11,9 +11,9 @@
         }
       </style>
 
-      <script src ='scripts/phaser.min.js'></script>
+      <script src ='lib/phaser.min.js'></script>
 
-      <script src='scripts/script.js'></script>
+      <script src='src/script.js'></script>
   </head>
   <body>
 
